--- a/package.json
+++ b/package.json
@@ -53,15 +53,13 @@
     "yup": "^0.26.7"
   },
   "keywords": [
-    "gatsby",
-    "gatsby-starter",
-    "lekoarts"
+    "gatsby"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop -o",
+    "start": "gatsby develop ",
     "serve": "gatsby build && gatsby serve",
     "lint": "yarn run lint:md && yarn run lint:js:fix",
     "lint:js": "eslint . --ext .js,.jsx --ignore-path .gitignore",
@@ -69,15 +67,6 @@
     "lint:md": "prettier --write blog/**/*.md"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.3"
+    "babel-preset-gatsby": "^0.1.6"
   }
 }
