--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-source-graphql": "^2.0.18",
     "gatsby-transformer-remark": "^2.1.19",
     "gatsby-transformer-sharp": "^2.1.10",
     "mdx-utils": "0.0.2",
