--- a/package.json
+++ b/package.json
@@ -4,54 +4,61 @@
   "version": "2.0.0",
   "author": "LekoArts <hello@lekoarts.de>",
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "@mdx-js/mdx": "^0.16.6",
+    "@callstack/react-theme-provider": "^3.0.0",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.12",
+    "@hot-loader/react-dom": "16.8.6",
+    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/react": "^1.0.21",
     "@mdx-js/tag": "^0.16.6",
-    "core-js": "^2.6.1",
-    "dotenv": "^6.2.0",
+    "change-case": "^3.1.0",
+    "core-js": "^3.1.4",
+    "dotenv": "^8.0.0",
     "dotenv-parse-variables": "^0.2.0",
-    "emotion": "^10.0.5",
-    "emotion-server": "^10.0.5",
-    "emotion-theming": "^10.0.6",
-    "formik": "^1.4.2",
-    "gatsby": "^2.0.82",
-    "gatsby-awesome-pagination": "^0.3.3",
-    "gatsby-image": "^2.0.25",
-    "gatsby-link": "^2.0.7",
-    "gatsby-mdx": "^0.3.4",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.13",
+    "emotion": "^10.0.9",
+    "emotion-server": "^10.0.9",
+    "emotion-theming": "^10.0.10",
+    "formik": "^1.5.7",
+    "gatsby": "^2.10.0",
+    "gatsby-awesome-pagination": "^0.3.4",
+    "gatsby-cli": "^2.7.0",
+    "gatsby-image": "^2.2.1",
+    "gatsby-link": "^2.2.0",
+    "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-catch-links": "^2.1.0",
+    "gatsby-plugin-emotion": "^4.1.0",
+    "gatsby-plugin-feed": "^2.3.0",
+    "gatsby-plugin-google-analytics": "^2.1.0",
+    "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-offline": "^2.0.20",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-typography": "^2.2.5",
-    "gatsby-remark-copy-linked-files": "^2.0.8",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-plugin-offline": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-images": "^3.1.0",
+    "gatsby-remark-prismjs": "^3.3.0",
+    "gatsby-source-filesystem": "^2.1.0",
     "gatsby-source-graphql": "^2.0.18",
-    "gatsby-transformer-remark": "^2.1.19",
-    "gatsby-transformer-sharp": "^2.1.10",
+    "gatsby-transformer-remark": "^2.5.0",
+    "gatsby-transformer-sharp": "^2.2.0",
     "mdx-utils": "0.0.2",
-    "polished": "^2.3.3",
-    "prism-react-renderer": "^0.1.5",
-    "prism-themes": "^1.0.1",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
-    "react-helmet": "~5.2.0",
-    "react-live": "^1.12.0",
-    "react-markdown": "^4.0.6",
-    "react-share": "^2.4.0",
-    "react-typography": "^0.16.18",
-    "serve": "^10.1.1",
-    "typography": "^0.16.18",
-    "yup": "^0.26.7"
+    "polished": "^3.4.1",
+    "prism-react-renderer": "^0.1.6",
+    "prism-themes": "^1.1.0",
+    "prismjs": "^1.16.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "~5.2.1",
+    "react-icons": "^3.7.0",
+    "react-live": "^2.1.2",
+    "react-markdown": "^4.0.9",
+    "react-share": "^3.0.0",
+    "react-typography": "^0.16.19",
+    "serve": "^11.0.2",
+    "typescript": "^3.5.2",
+    "typography": "^0.16.19",
+    "yup": "^0.27.0"
   },
   "keywords": [
     "gatsby"
