--- a/package.json
+++ b/package.json
@@ -4,59 +4,62 @@
   "version": "2.0.0",
   "author": "Youssouf El Azizi",
   "dependencies": {
-    "@callstack/react-theme-provider": "^3.0.0",
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
-    "@hot-loader/react-dom": "16.8.6",
-    "@mdx-js/mdx": "^1.0.21",
-    "@mdx-js/react": "^1.0.21",
-    "@mdx-js/tag": "^0.16.6",
+    "@callstack/react-theme-provider": "^3.0.3",
+    "@emotion/core": "^10.0.17",
+    "@emotion/styled": "^10.0.17",
+    "@hot-loader/react-dom": "16.9.0",
+    "@mdx-js/mdx": "^1.4.5",
+    "@mdx-js/react": "^1.4.5",
+    "@mdx-js/tag": "^0.20.3",
     "change-case": "^3.1.0",
-    "core-js": "^3.1.4",
-    "dotenv": "^8.0.0",
-    "dotenv-parse-variables": "^0.2.0",
-    "emotion": "^10.0.9",
-    "emotion-server": "^10.0.9",
-    "emotion-theming": "^10.0.10",
-    "formik": "^1.5.7",
-    "gatsby": "^2.10.0",
+    "core-js": "^3.2.1",
+    "dotenv": "^8.1.0",
+    "dotenv-parse-variables": "^0.2.3",
+    "emotion": "^10.0.17",
+    "emotion-server": "^10.0.17",
+    "emotion-theming": "^10.0.17",
+    "formik": "^1.5.8",
+    "gatsby": "^2.15.12",
     "gatsby-awesome-pagination": "^0.3.4",
-    "gatsby-cli": "^2.7.0",
-    "gatsby-image": "^2.2.1",
-    "gatsby-link": "^2.2.0",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-catch-links": "^2.1.0",
-    "gatsby-plugin-emotion": "^4.1.0",
-    "gatsby-plugin-feed": "^2.3.0",
-    "gatsby-plugin-google-analytics": "^2.1.0",
-    "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-cli": "^2.7.46",
+    "gatsby-image": "^2.2.18",
+    "gatsby-link": "^2.2.13",
+    "gatsby-mdx": "^1.0.0",
+    "gatsby-plugin-catch-links": "^2.1.9",
+    "gatsby-plugin-emotion": "^4.1.6",
+    "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby-plugin-manifest": "^2.2.16",
+    "gatsby-plugin-mdx": "^1.0.40",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-offline": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-plugin-typography": "^2.3.0",
-    "gatsby-remark-copy-linked-files": "^2.1.0",
-    "gatsby-remark-images": "^3.1.0",
-    "gatsby-remark-prismjs": "^3.3.0",
-    "gatsby-source-filesystem": "^2.1.0",
-    "gatsby-source-graphql": "^2.0.18",
-    "gatsby-transformer-remark": "^2.5.0",
-    "gatsby-transformer-sharp": "^2.2.0",
-    "mdx-utils": "0.0.2",
+    "gatsby-plugin-offline": "^3.0.5",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-twitter": "^2.1.6",
+    "gatsby-plugin-typography": "^2.3.7",
+    "gatsby-remark-copy-linked-files": "^2.1.18",
+    "gatsby-remark-embedder": "^1.1.2",
+    "gatsby-remark-images": "^3.1.21",
+    "gatsby-remark-prismjs": "^3.3.13",
+    "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-source-graphql": "^2.1.13",
+    "gatsby-transformer-remark": "^2.6.22",
+    "gatsby-transformer-sharp": "^2.2.14",
+    "mdx-utils": "0.2.0",
     "polished": "^3.4.1",
-    "prism-react-renderer": "^0.1.6",
+    "prism-react-renderer": "^0.1.7",
     "prism-themes": "^1.1.0",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "prismjs": "^1.17.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "~5.2.1",
     "react-icons": "^3.7.0",
-    "react-live": "^2.1.2",
-    "react-markdown": "^4.0.9",
-    "react-share": "^3.0.0",
+    "react-live": "^2.2.0",
+    "react-markdown": "^4.2.2",
+    "react-share": "^3.0.1",
     "react-typography": "^0.16.19",
-    "serve": "^11.0.2",
-    "typescript": "^3.5.2",
+    "serve": "^11.1.0",
+    "typescript": "^3.6.2",
     "typography": "^0.16.19",
     "yup": "^0.27.0"
   },
@@ -75,6 +78,6 @@
     "lint:md": "prettier --write blog/**/*.md"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "^0.1.6"
+    "babel-preset-gatsby": "^0.2.13"
   }
 }
