--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-link": "^2.2.27",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-catch-links": "^2.1.21",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-emotion": "^4.1.18",
     "gatsby-plugin-feed": "^2.3.25",
     "gatsby-plugin-google-analytics": "^2.1.31",
