--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-twitter": "^2.1.17",
     "gatsby-plugin-typography": "^2.3.20",
     "gatsby-remark-copy-linked-files": "^2.1.33",
