update @emotion/react dep

--- a/package.json
+++ b/package.json
@@ -5,65 +5,66 @@
   "author": "Youssouf El Azizi",
   "dependencies": {
     "@callstack/react-theme-provider": "^2.1.0",
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
-    "@hot-loader/react-dom": "16.11.0",
-    "@mdx-js/mdx": "^1.5.3",
-    "@mdx-js/react": "^1.5.3",
+    "@emotion/react": "^11.0.0",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "@hot-loader/react-dom": "17.0.1",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mdx-js/tag": "^0.20.3",
-    "change-case": "^4.1.1",
-    "core-js": "^3.6.2",
+    "change-case": "^4.1.2",
+    "core-js": "^3.8.1",
     "dotenv": "^8.2.0",
-    "dotenv-parse-variables": "^0.2.3",
-    "emotion": "^10.0.27",
-    "emotion-server": "^10.0.27",
-    "emotion-theming": "^10.0.27",
-    "formik": "^2.1.1",
-    "gatsby": "^2.18.18",
-    "gatsby-awesome-pagination": "^0.3.5",
-    "gatsby-cli": "^2.8.23",
-    "gatsby-image": "^2.2.37",
-    "gatsby-link": "^2.2.27",
+    "dotenv-parse-variables": "^1.0.1",
+    "emotion": "^11.0.0",
+    "emotion-server": "^11.0.0",
+    "emotion-theming": "^11.0.0",
+    "formik": "^2.2.6",
+    "gatsby": "^2.29.1",
+    "gatsby-awesome-pagination": "^0.3.6",
+    "gatsby-cli": "^2.16.1",
+    "gatsby-image": "^2.8.0",
+    "gatsby-link": "^2.8.0",
     "gatsby-mdx": "^1.0.0",
-    "gatsby-plugin-catch-links": "^2.1.21",
-    "gatsby-plugin-disqus": "^1.1.4",
-    "gatsby-plugin-emotion": "^4.1.18",
-    "gatsby-plugin-feed": "^2.3.25",
-    "gatsby-plugin-google-analytics": "^2.1.31",
-    "gatsby-plugin-manifest": "^2.2.34",
-    "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-catch-links": "^2.7.0",
+    "gatsby-plugin-disqus": "^1.2.2",
+    "gatsby-plugin-emotion": "^5.1.0",
+    "gatsby-plugin-feed": "^2.10.0",
+    "gatsby-plugin-google-analytics": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.9.0",
+    "gatsby-plugin-mdx": "^1.7.0",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-offline": "^3.0.30",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-plugin-twitter": "^2.1.17",
-    "gatsby-plugin-typography": "^2.3.20",
-    "gatsby-remark-copy-linked-files": "^2.1.33",
-    "gatsby-remark-embedder": "^1.7.0",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-remark-prismjs": "^3.3.29",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-source-graphql": "^2.1.30",
-    "gatsby-transformer-remark": "^2.6.45",
-    "gatsby-transformer-sharp": "^2.3.9",
+    "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-sitemap": "^2.9.0",
+    "gatsby-plugin-twitter": "^2.7.0",
+    "gatsby-plugin-typography": "^2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-embedder": "^4.1.0",
+    "gatsby-remark-images": "^3.8.0",
+    "gatsby-remark-prismjs": "^3.10.0",
+    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-graphql": "^2.11.0",
+    "gatsby-transformer-remark": "^2.13.0",
+    "gatsby-transformer-sharp": "^2.9.0",
     "mdx-utils": "0.2.0",
-    "polished": "^3.4.2",
-    "prism-react-renderer": "^1.0.2",
-    "prism-themes": "^1.3.0",
-    "prismjs": "^1.18.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "~5.2.1",
-    "react-icons": "^3.8.0",
-    "react-live": "^2.2.2",
-    "react-markdown": "^4.3.1",
-    "react-share": "^4.0.0",
+    "polished": "^4.0.5",
+    "prism-react-renderer": "^1.1.1",
+    "prism-themes": "^1.5.0",
+    "prismjs": "^1.22.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "~6.1.0",
+    "react-icons": "^4.1.0",
+    "react-live": "^2.2.3",
+    "react-markdown": "^5.0.3",
+    "react-share": "^4.3.1",
     "react-typography": "^0.16.19",
-    "serve": "^11.3.0",
-    "typescript": "^3.7.4",
+    "serve": "^11.3.2",
+    "typescript": "^4.1.3",
     "typography": "^0.16.19",
-    "yup": "^0.28.0"
+    "yup": "^0.32.8"
   },
   "keywords": [
     "gatsby"
@@ -80,6 +81,6 @@
     "lint:md": "prettier --write blog/**/*.md"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "^0.2.26"
+    "babel-preset-gatsby": "^0.9.0"
   }
 }
