fix netlify build

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 [build]
-  command = "yarn run build"
-  publish = "public"
-[build.environment]
-  NODE_VERSION = "8.11.3"
+  command = "pnpm run build"
+  publish = "dist"
