--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -2,7 +2,6 @@
 # - on Pull Requests containing images (not including forks)
 # - on pushing of images to `main` (for forks)
 # - on demand (https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/)
-# - at 11 PM every Sunday in anything gets missed with any of the above scenarios
 # For Pull Requests, the images are added to the PR.
 # For other scenarios, a new PR will be opened if any images are compressed.
 name: Compress images
@@ -16,6 +15,7 @@ on:
   push:
     branches:
       - master
+      - main
     paths:
       - "**.jpg"
       - "**.jpeg"
