--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
     "@astrojs/sitemap": "^1.3.1",
     "@astrojs/tailwind": "^3.1.2",
     "@divriots/jampack": "^0.11.2",
+    "@swup/a11y-plugin": "^3.0.0",
+    "@swup/ga-plugin": "^1.1.0",
+    "@swup/head-plugin": "^1.3.0",
+    "@swup/overlay-theme": "^1.1.1",
+    "@swup/preload-plugin": "^2.2.0",
+    "@swup/progress-plugin": "^2.0.0",
+    "@swup/scripts-plugin": "^1.1.0",
+    "@swup/scroll-plugin": "^2.0.2",
+    "@swup/slide-theme": "^1.0.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.6",
@@ -46,7 +55,8 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swup": "^3.0.8"
   },
   "config": {
     "commitizen": {
