feat: expressive-code as new code snippet

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@astrojs/rss": "^2.4.1",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^2.4.5",
+    "astro-expressive-code": "^0.19.0",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
-    "remark-code-title": "^0.2.5",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.8.1",
