--- a/package.json
+++ b/package.json
@@ -16,48 +16,38 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/partytown": "^1.2.2",
-    "@astrojs/rss": "^2.4.1",
+    "@astrojs/partytown": "^1.2.3",
+    "@astrojs/rss": "^2.4.4",
     "@resvg/resvg-js": "^2.4.1",
-    "astro": "^2.4.5",
-    "astro-expressive-code": "^0.19.0",
+    "astro": "^2.10.9",
+    "astro-expressive-code": "^0.19.2",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.8.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@astrojs/react": "^2.1.3",
-    "@astrojs/sitemap": "^1.3.1",
-    "@astrojs/tailwind": "^3.1.2",
-    "@divriots/jampack": "^0.11.2",
-    "@swup/a11y-plugin": "^3.0.0",
-    "@swup/ga-plugin": "^1.1.0",
-    "@swup/head-plugin": "^1.3.0",
-    "@swup/overlay-theme": "^1.1.1",
-    "@swup/preload-plugin": "^2.2.0",
-    "@swup/progress-plugin": "^2.0.0",
-    "@swup/scripts-plugin": "^1.1.0",
-    "@swup/scroll-plugin": "^2.0.2",
-    "@swup/slide-theme": "^1.0.5",
+    "@astrojs/react": "^2.2.2",
+    "@astrojs/sitemap": "^1.4.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@divriots/jampack": "^0.11.7",
     "@tailwindcss/typography": "^0.5.9",
     "@types/github-slugger": "^1.3.0",
-    "@types/react": "^18.2.6",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@types/react": "^18.2.20",
+    "@typescript-eslint/parser": "^5.62.0",
     "astro-eslint-parser": "^0.14.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.40.0",
-    "eslint-plugin-astro": "^0.27.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-astro": "^0.27.2",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swup": "^3.0.8"
+    "react-dom": "^18.2.0"
   },
   "config": {
     "commitizen": {
